# Wardian

./: .codecov.yml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DRAFT_PLAN.md  GEMINI.md  ISSUES.md  LICENSE  README.md  ROADMAP.md  comments.json  help.txt  index.html  package-lock.json  package.json  release-please-config.json  temp1.json  temp2.json  temp_action.json  temp_output.json  vite.config.ts  vitest.config.ts
.gemini/: terminal_fix_summary.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/wardian-cli/: Cargo.toml
crates/wardian-cli/src/: args.rs  artifact.rs  disk.rs  errors.rs  graph.rs  library.rs  live.rs  main.rs  output.rs  watchlist.rs
crates/wardian-cli/tests/: agent_cli.rs  artifact_cli.rs  ask_cli.rs  graph_cli.rs  library_cli.rs  send_cli.rs  watchlist_cli.rs  workflow_cli.rs  workflow_v2_cli.rs
crates/wardian-core/: Cargo.toml
crates/wardian-core/src/: atomic_file.rs  classes.rs  control.rs  conversation_lease.rs  conversations.rs  db.rs  identity.rs  lib.rs  paths.rs  topology.rs  workbench.rs
crates/wardian-core/src/artifacts/: mod.rs  models.rs  store.rs
crates/wardian-core/src/engine/: core.rs  driver.rs  error.rs  event.rs  executor.rs  graph.rs  interpolate.rs  mod.rs  state.rs  store.rs
crates/wardian-core/src/files/: authorized_roots.rs  descriptor.rs  mod.rs
crates/wardian-core/src/models/: agent_config.rs  app_telemetry.rs  chat.rs  fs.rs  git.rs  library.rs  mod.rs  terminal_session.rs  workbench.rs  workflow.rs
crates/wardian-core/src/schedule/: mod.rs
crates/wardian-core/src/workflow/: assignment.rs  diff.rs  error.rs  locate.rs  mod.rs  normalize.rs  parse.rs  registry.rs  validate.rs
crates/wardian-core/src/workflow/projections/: mod.rs  reference_doc.rs  ts_schema.rs
crates/wardian-core/tests/: engine_e2e.rs  workbench.rs  workflow_round_trip.rs
crates/wardian-core/tests/fixtures/: minimal.md  pr-review.md  workbench-v1.json
crates/wardian-engine/: Cargo.toml
crates/wardian-engine/src/: core.rs  driver.rs  error.rs  executor.rs  graph.rs  interpolate.rs  lib.rs  store.rs
crates/wardian-engine/tests/: engine_e2e.rs
crates/wardian-workflow/: Cargo.toml
crates/wardian-workflow/src/: blueprint.rs  diff.rs  error.rs  field_type.rs  lib.rs  normalize.rs  parse.rs  registry.rs  validate.rs
crates/wardian-workflow/src/projections/: reference_doc.rs  ts_schema.rs
crates/wardian-workflow/tests/: round_trip.rs
docs/: design.md  feature-user-story-status.csv  features.md  index.md  os-support.md  providers.md
e2e/: playwright.config.ts  playwright.workbench.config.ts
playwright-report/: index.html
public/: manifest.webmanifest  remote-sw.js
scripts/: capture-doc-screenshots.mjs  capture-outside-provider-rendering.ps1  capture-outside-terminal-frame.ps1  capture-readme-demo-real.mjs  capture-readme-demo.mjs  gemini-patch-skills.cjs  measure-view-performance.mjs  measure-workbench-performance.mjs  mock-agent.cjs  native-e2e-runner.mjs  native-e2e-targets.mjs  probe-terminal-query.cjs  run-native-e2e-fast.mjs  run-native-e2e-watch.mjs  run-native-e2e.mjs  setup-native-e2e.mjs  setup-native-e2e.ps1  stage-cli.mjs  verify-frontend-screenshot.mjs  (+2 more)
src/: App.css  (+20 more)
src-tauri/: Cargo.toml  build.rs  cargo_error.txt  error.txt  tauri.conf.json  tauri.macos.conf.json  test-pty.rs
src-tauri/agent_prompts/: Architect.md  Coder.md  Coordinator.md  Designer.md  Editor.md  Evolver.md  Generalist.md  Orchestrator.md  Personal Assistant.md  QA.md  Researcher.md  Reviewer.md  Warden.md
src-tauri/capabilities/: default.json
src-tauri/conpty/: README.md
src-tauri/icons/: icon.icns
src-tauri/icons/transparent/: icon.icns
src-tauri/icons/white/: icon.icns
src-tauri/src/: artifact_service.rs  control.rs  default_classes.json  lib.rs  main.rs  manager.rs  manager.rs.bak  manager.rs.prior  manager.rs.prior.utf8  topology_watch.rs
src-tauri/src/commands/: agent.rs  artifacts.rs  chat.rs  class.rs  conversation.rs  debug.rs  file_recovery.rs  files.rs  fs.rs  git.rs  inbox.rs  library.rs  mod.rs  patch.rs  remote.rs  settings.rs  terminal.rs  terminal_session.rs  topology.rs  watchlist.rs  workbench.rs  workflow.rs
src-tauri/src/delivery/: headless_process.rs  live_surface.rs  mod.rs  provider_events.rs
src-tauri/src/manager/: classes.rs  claude.rs  codex.rs  headless.rs  mod.rs  opencode.rs  session_identity.rs  spawn.rs  spawn_tests.rs  telemetry.rs
src-tauri/src/models/: agent_config.rs  agent_telemetry.rs  library.rs  mod.rs  provider.rs  session_policy.rs  workflow.rs
src-tauri/src/providers/: antigravity.rs  chat_transcript.rs  claude.rs  codex.rs  factory.rs  gemini.rs  mock.rs  mod.rs  npm.rs  opencode.rs  readiness.rs  transcript.rs
src-tauri/src/remote/: audit.rs  auth.rs  crypto.rs  gateway.rs  mod.rs  models.rs  operations.rs  policy.rs  setup_check.rs  storage.rs  terminal_stream.rs
src-tauri/src/state/: active_agent.rs  agent_watch.rs  app_state.rs  artifact_runtime.rs  conversation_archive.rs  file_resources.rs  interactions.rs  mailbox.rs  mod.rs  terminal_attach.rs  terminal_text.rs  user_terminal.rs
src-tauri/src/state/conversation_archive/: mod.rs  records.rs  storage.rs  tests.rs  turns.rs
src-tauri/src/state/terminal_session/: actor.rs  mod.rs  native.rs  replay.rs  snapshot.rs  tests.rs
src-tauri/src/utils/: app_settings.rs  cli_install.rs  codex_policy.rs  db.rs  delivery_profile.rs  delivery_transaction.rs  fs.rs  logging.rs  migration.rs  mod.rs  onboarding.rs  process.rs  pty_buffer.rs  pty_decode.rs  shell.rs  terminal_input.rs
src-tauri/src/workflow/: mod.rs  ops.rs  output.rs  resolve.rs  runner.rs  runs.rs  schedule.rs
src-tauri/src/workflow_engine/: agent_execution.rs  migrate.rs  mod.rs
src-tauri/src/workflow_v2/: mod.rs  ops.rs  output.rs  resolve.rs  runner.rs  runs.rs  schedule.rs
src-tauri/tests/: mock_provider_e2e.rs  workflow_executor.rs  workflow_invoker.rs  workflow_schedule.rs  workflow_schedule_cmd.rs  workflow_v2_executor.rs  workflow_v2_invoker.rs  workflow_v2_schedule.rs  workflow_v2_schedule_cmd.rs
(+928 files in other folders)
