[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/wardian-core",
  "crates/wardian-cli",
]

[workspace.package]
version = "0.3.6"
edition = "2021"
authors = ["Tan Gemicioglu"]
license = "MIT"
repository = "https://github.com/wardian-app/Wardian"
homepage = "https://wardian.org"

[workspace.dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
once_cell = "1.20.2"
rusqlite = { version = "0.33.0", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.26.0"
thiserror = "2.0"
uuid = { version = "1.21.0", features = ["v4"] }

[profile.dev.package."*"]
debug = false
opt-level = 1
