[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/wardian-core",
  "crates/wardian-cli",
]

[workspace.package]
version = "0.4.4"
edition = "2021"
authors = ["Tan Gemicioglu"]
license = "MIT"
repository = "https://github.com/wardian-app/Wardian"
homepage = "https://wardian.org"

[workspace.dependencies]
axum = { version = "0.8.7", features = ["ws"] }
base64 = "0.22"
chrono = "0.4.38"
dirs = "5.0.1"
diffy = "0.4"
hmac = "0.12"
once_cell = "1.20.2"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand = "0.8"
rusqlite = { version = "0.33.0", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
tempfile = "3.26.0"
thiserror = "2.0"
uuid = { version = "1.21.0", features = ["v4"] }

[patch.crates-io]
portable-pty = { path = "vendor/portable-pty" }

[profile.dev.package."*"]
debug = false
opt-level = 1
