[package]
name = "Wardian"
version = "0.1.0"
description = "Multi-agent Terminal Manager"
authors = ["Tan Gemicioglu"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wardian_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["process", "sync", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1.21.0", features = ["v4"] }
portable-pty = "0.9.0"
win32job = "2.0.3"
sysinfo = "0.38.2"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "handleapi"] }
chrono = "0.4.38"

[dev-dependencies]
tempfile = "3.26.0"

# Optimize Disk Space for Debug Builds
[profile.dev.package."*"]
debug = false # Strip massive debug symbols from third-party dependencies
opt-level = 1 # Slight optimization on dependencies for better runtime performance during dev
