[package]
name = "Wardian"
version = "0.3.0"
description = "Integrated Agent Environment"
authors = ["Tan Gemicioglu"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wardian_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
terminal-trace = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["process", "sync", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1.21.0", features = ["v4"] }
portable-pty = "0.9.0"
sysinfo = "0.38.2"
chrono = "0.4.38"
dirs = "5.0.1"
shlex = "1.3.0"
tauri-plugin-clipboard-manager = "2.3.2"
regex = "1.12.3"
tauri-plugin-notification = "2.0.0-rc.3"
notify = "6.1.1"
rusqlite = { version = "0.33.0", features = ["bundled", "serde_json"] }
once_cell = "1.20.2"

[target.'cfg(windows)'.dependencies]
win32job = "2.0.3"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "handleapi"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Shell", 
    "Win32_UI_Shell_PropertiesSystem", 
    "Win32_System_Com", 
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Ole"
] }

[dev-dependencies]
tempfile = "3.26.0"

# Optimize Disk Space for Debug Builds
[profile.dev.package."*"]
debug = false # Strip massive debug symbols from third-party dependencies
opt-level = 1 # Slight optimization on dependencies for better runtime performance during dev
