[package]
name = "Wardian"
version = "0.4.3"
description = "A local desktop command center for supervising and shaping AI agent teams."
authors = ["Tan Gemicioglu"]
edition = "2021"
build = "build.rs"
license = "MIT"
repository = "https://github.com/wardian-app/Wardian"
homepage = "https://wardian.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wardian_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Wardian"
path = "src/main.rs"

[features]
terminal-trace = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
tauri = { version = "=2.11.2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["io-util", "net", "process", "sync", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1.21.0", features = ["v4"] }
portable-pty = "0.9.0"
vt100 = "0.16.2"
sysinfo = "0.38.2"
dirs = "5.0.1"
shlex = "1.3.0"
tauri-plugin-clipboard-manager = "2.3.2"
regex = "1.12.3"
reqwest = { version = "=0.13.3", default-features = false, features = ["rustls-no-provider"] }
tauri-plugin-notification = "2.3.3"
notify = "6.1.1"
rusqlite = { version = "0.33.0", features = ["bundled", "serde_json"] }
once_cell = "1.20.2"
same-file = "1.0.6"
tauri-plugin-dialog = "2"
wardian-core = { path = "../crates/wardian-core" }
tauri-plugin-process = "2.3.1"
sha2 = { workspace = true }
subtle = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32job = "2.0.3"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "handleapi", "jobapi2"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Shell", 
    "Win32_UI_Shell_PropertiesSystem", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com", 
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Ole"
] }
winreg = "0.52"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
anyhow = "1"
tempfile = "3.26.0"

# Optimize Disk Space for Debug Builds
