[package]
name = "wardian-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "wardian"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wardian-core = { path = "../wardian-core" }

[dev-dependencies]
tempfile = { workspace = true }
