[package]
name = "wardian-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "wardian-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
chrono = { workspace = true }
tokio = { version = "1.49.0", features = ["io-util", "net", "rt", "time"] }
wardian-core = { path = "../wardian-core" }

[dev-dependencies]
tempfile = { workspace = true }
