[package]
name = "wardian-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_norway = "0.9"
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
